fixed overflow and added stylings to add user and assign-organisation

--- a/src/app/organization/add-user-pop-up/add-user-pop-up.component.scss
+++ b/src/app/organization/add-user-pop-up/add-user-pop-up.component.scss
@@ -1,10 +1,20 @@
-.user{
+.user {
     margin-bottom: 0px
 }
 
-.assignedUsersTable{
-    height: fit-content;
-    width: 100%;
-    padding: 10%;
-    margin-top: 40px;
+.mat-card-actions {
+    margin: 0;
+}
+
+table {
+    border: 1px solid rgb(236 236 236);
+}
+
+.adduser-table {
+    height: 300px;
+    overflow: auto;
+
+    tr:nth-child(even) {
+        background: #EAF1F6;
+    }
 }
